Fixes issue with scrollbars showing on that scrolly-crawly div.

--- a/src/sass/_body.scss
+++ b/src/sass/_body.scss
@@ -212,6 +212,7 @@ html {
         justify-content: center;
         align-content: center;
         align-items: center;
+        overflow-x: hidden;
         overflow-y: hidden;
         &__background {
           position: absolute;
